--- a/ShopmeWebParent/ShopmeFrontend/src/main/resources/templates/loginPage.html
+++ b/ShopmeWebParent/ShopmeFrontend/src/main/resources/templates/loginPage.html
@@ -52,7 +52,7 @@
                 </a>
             </form>
             <p class="mt-2">Do not have an account? <a th:href="@{/customer/registerPage}">Register Here</a>. Or
-                <a href="#">Forgot Password</a>
+                <a th:href="@{/forgot_password}">Forgot Password</a>
             </p>
         </div>
     </div>
