--- a/ShopmeWebParent/ShopmeFrontend/src/main/resources/templates/loginPage.html
+++ b/ShopmeWebParent/ShopmeFrontend/src/main/resources/templates/loginPage.html
@@ -16,6 +16,9 @@
             <div th:if="${param.error}"
                  class="alert alert-danger my-2 text-center">[[${session.SPRING_SECURITY_LAST_EXCEPTION.message}]]
             </div>
+            <div th:if="${success}"
+                 class="alert alert-success my-2 text-center" th:text="${message}">
+            </div>
             <div th:if="${param.loginError}"
                  class="alert alert-danger my-2 text-center" th:text="${param.message}">
             </div>
