--- a/ShopmeWebParent/ShopmeFrontend/src/main/resources/templates/loginPage.html
+++ b/ShopmeWebParent/ShopmeFrontend/src/main/resources/templates/loginPage.html
@@ -54,7 +54,7 @@
                     <img th:src="@{/image/google.png}" alt="google" class="icon"/> <span class="ms-1">Continue with Google</span>
                 </a>
             </form>
-            <p class="mt-2">Do not have an account? <a th:href="@{/customer/registerPage}">Register Here</a>. Or
+            <p class="mt-2">Do not have an account? <a th:href="@{/registerPage}">Register Here</a>. Or
                 <a th:href="@{/forgot_password}">Forgot Password</a>
             </p>
         </div>
