--- a/ShopmeWebParent/ShopmeFrontend/src/main/resources/static/css/style.css
+++ b/ShopmeWebParent/ShopmeFrontend/src/main/resources/static/css/style.css
@@ -7,26 +7,36 @@
     font-style: normal;
 }
 
-body{
-	font-family: 'Overlock', Arial, serif !important;
-	background:#eee;
+body {
+    font-family: 'Overlock', Arial, serif !important;
+    background: #eee;
 }
 
-.footer{
-	/*position: absolute;*/
-	/*bottom:0;*/
-	/*left:0;*/
-	/*right:0;*/
+.footer {
+    /*position: absolute;*/
+    /*bottom:0;*/
+    /*left:0;*/
+    /*right:0;*/
 
-	margin-top: 10px;
+    margin-top: 10px;
 }
 
-.icon{
-	width:25px;
-	height:25px;
+.icon {
+    width: 25px;
+    height: 25px;
 }
 
-.icon_lg{
-	width: 150px;
-	height: 150px;
+.icon-md {
+    width: 130px;
+    height: 100px;
+}
+
+.icon_lg {
+    width: 150px;
+    height: 150px;
+}
+
+.quantity_field{
+    text-align: center;
+    width: 50px;
 }
