--- a/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/create_shipping_rate.html
+++ b/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/create_shipping_rate.html
@@ -1,11 +1,69 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity6" lang="en">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity6"
+      lang="en">
 <head th:replace="~{fragment/head :: head}">
 </head>
 <body class="d-flex flex-column min-vh-100">
 <nav th:replace="~{fragment/navbar :: navbar}"></nav>
 <div class="container flex-grow-1">
-
+    <div class="row my-2">
+        <div class="col-sm-12 col-md-6 mx-auto">
+            <form class="card p-2 mx-auto" th:action="@{'/shipping/save'}"
+                  method="post" th:object="${rate}" enctype="multipart/form-data">
+                <h2
+                        class="my-3 text-primary d-flex justify-content-center align-items-center">
+                    Create New Sipping Rate
+                </h2>
+                <div class="alert"
+                     th:classappend="${savedSuccessfully} ? 'alert-success' : 'alert-danger'"
+                     th:if="${savingRate}">
+                    <span th:text="${message}"></span>
+                </div>
+                <input type="hidden" th:name="${_csrf.parameterName}"
+                       th:value="${_csrf.token}"/> <input type="hidden" name="id"
+                                                          th:value="*{id}"/>
+                <div>
+                    <label for="country">Country</label><br/>
+                    <select name="country"
+                            id="country" th:field="*{country}"
+                            class="form-control">
+                        <option th:each="country:${countries}" th:text="${country.name}"
+                                th:value="${country.name}"></option>
+                    </select>
+                </div>
+                <br/>
+                <div>
+                    <label for="state">State</label><br/>
+                    <select name="state"
+                            id="state" th:field="*{state}"
+                            class="form-control">
+                        <option th:each="state:${states}" th:text="${state.name}"
+                                th:value="${state.name}"></option>
+                    </select>
+                </div>
+                <br/>
+                <div>
+                    <label for="rate">Rate</label><br/>
+                    <input type="number" name="rate" id="rate" class="form-control" th:field="*{rate}"/>
+                </div>
+                <br/>
+                <div>
+                    <label for="days">Delivery Days</label><br/>
+                    <input type="number" name="days" id="days" class="form-control" th:field="*{days}"/>
+                </div>
+                <br/>
+                <div>
+                    <input type="checkbox" name="enabled" id="enabled"
+                           th:field="*{codSupported}"/> <label for="enabled">COD Supported</label>
+                </div>
+                <br/>
+                <div>
+                    <button type="submit" class="btn btn-primary">Save</button>
+                    <button type="reset" class="btn btn-danger">Clean</button>
+                </div>
+            </form>
+        </div>
+    </div>
 </div>
 <footer th:replace="~{fragment/footer :: footer}"></footer>
 </body>
