--- a/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/fragment/navbar.html
+++ b/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/fragment/navbar.html
@@ -24,7 +24,7 @@
                 <li class="nav-item" sec:authorize="hasAnyAuthority('ROLE_ADMIN','ROLE_SALESPERSON')"><a class="nav-link" aria-current="page"
                                         th:href="@{/customers}">Customers</a></li>
                 <li class="nav-item" sec:authorize="hasAnyAuthority('ROLE_ADMIN','ROLE_SALESPERSON')"><a class="nav-link" aria-current="page"
-                                        href="#">Shipping</a></li>
+                                        th:href="@{/shipping}">Shipping</a></li>
                 <li class="nav-item" sec:authorize="hasAnyAuthority('ROLE_ADMIN','ROLE_SALESPERSON','ROLE_SHIPPER')"><a class="nav-link" aria-current="page"
                                         href="#">Orders</a></li>
                 <li class="nav-item" sec:authorize="hasAnyAuthority('ROLE_ADMIN','ROLE_SALESPERSON')"><a class="nav-link" aria-current="page"
