Separated Address Module

--- a/ShopmeWebParent/ShopmeFrontend/src/main/resources/templates/fragment/navbar.html
+++ b/ShopmeWebParent/ShopmeFrontend/src/main/resources/templates/fragment/navbar.html
@@ -40,6 +40,10 @@
                         <li><a class="dropdown-item"
                                th:href="@{'/customer/profile?id='+${#authentication.principal.customer.id}}">Profile</a>
                         </li>
+                        <li><a class="dropdown-item"
+                               th:href="@{'/customer/profile?id='+${#authentication.principal.customer.id}}">Address
+                            Book</a>
+                        </li>
                         <li>
                             <hr class="dropdown-divider">
                         </li>
