--- a/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/fragment/navbar.html
+++ b/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/fragment/navbar.html
@@ -13,7 +13,9 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                <li class="nav-item" sec:authorize="hasAuthority('ROLE_ADMIN')"><a class="nav-link active"
+                <li class="nav-item" sec:authorize="isAuthenticated()"><a class="nav-link active"
+                                                                                   aria-current="page" th:href="@{'/'}">Home</a></li>
+                <li class="nav-item" sec:authorize="hasAuthority('ROLE_ADMIN')"><a class="nav-link"
                                         aria-current="page" th:href="@{'/users'}">Users</a></li>
                 <li class="nav-item" sec:authorize="hasAnyAuthority('ROLE_EDITOR','ROLE_ADMIN')"><a class="nav-link" aria-current="page"
                                         th:href="@{'/categories'}">Categories</a></li>
