--- a/ShopmeWebParent/ShopmeFrontend/src/main/resources/templates/registerPage.html
+++ b/ShopmeWebParent/ShopmeFrontend/src/main/resources/templates/registerPage.html
@@ -1,119 +1,134 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
-	xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity6"
-	lang="en">
+      xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity6"
+      lang="en">
 <head th:replace="~{fragment/head :: head}">
 </head>
 <body class="d-flex flex-column min-vh-100">
-	<nav th:replace="~{fragment/unauthorizedNavbar :: unauthorizedNavbar}"></nav>
+<nav th:replace="~{fragment/unauthorizedNavbar :: unauthorizedNavbar}"></nav>
 
-	<div class="container flex-grow-1">
-		<div class="row">
-			<div class="col-md-10 card mx-auto mt-4 p-3">
-				<h3
-					class="text-primary text-center my-2 d-flex justify-content-center align-items-center">
-					<img th:src="@{/image/login.svg}" width="35" height="35"
-						class="me-1" alt="login" /> <span>Create New Account</span>
-				</h3>
-				<form method="post" th:action="@{/customer/register}" th:object="${customer}" enctype="multipart/form-data">
-					<input type="hidden" th:name="${_csrf.parameterName}"
-						th:value="${_csrf.token}" />
-					<div class="row">
-						<div class="col-md-6">
-							<div>
-								<label for="firstname">First Name</label> <input type="text"
-									class="form-control" id="firstname" name="firstname"
-									th:field="*{firstname}" required />
-									<div th:if="${#fields.hasErrors('firstname')}" th:errors="*{firstname}" class="text-danger"></div>
-							</div>
-							<br />
-							<div>
-								<label for="lastname">Last Name</label> <input type="text"
-									class="form-control" id="lastname" name="lastname"
-									th:field="*{lastname}" required />
-									<div th:if="${#fields.hasErrors('lastname')}" th:errors="*{lastname}" class="text-danger"></div>
-							</div>
-							<br />
-							<div>
-								<label for="email">Email</label> <input type="email"
-									class="form-control" id="email" name="email"
-									th:field="*{email}" required />
-									<div th:if="${#fields.hasErrors('email')}" th:errors="*{email}" class="text-danger"></div>
-							</div>
-							<br />
-							<div>
-								<label for="phone">Phone</label> <input type="text"
-									class="form-control" id="phone" name="phone"
-									th:field="*{phoneNumber}" required />
-									<div th:if="${#fields.hasErrors('phoneNumber')}" th:errors="*{phoneNumber}" class="text-danger"></div>
-							</div>
-							<br />
-							<div>
-								<label for="password">Password</label> <input type="password"
-									class="form-control" id="password" name="password"
-									th:field="*{password}" required />
-									<div th:if="${#fields.hasErrors('password')}" th:errors="*{password}" class="text-danger"></div>
-							</div>
-						</div>
-						<br />
-						<div class="col-md-6">
-							<div>
-								<label for="country">Country</label> <select type="text"
-									class="form-control" id="country" name="country"
-									th:field="*{country}" required>
-									<option value="">--Select Your Country--</option>
-									<option th:each="country : ${countries}"
-										th:value="${country.id}" th:text="${country.name}"></option>
-								</select>
-								<div th:if="${#fields.hasErrors('country')}" th:errors="*{country}" class="text-danger"></div>
-							</div>
-							<br />
-							<div>
-								<label for="state">State</label> <select type="text"
-									class="form-control" id="state" name="state"
-									th:field="*{state}" required>
-									<option value="">--Select Your State--</option>
-									<option th:each="state : ${states}" th:value="${state.id}"
-										th:text="${state.name}"></option>
-								</select>
-								<div th:if="${#fields.hasErrors('state')}" th:errors="*{state}" class="text-danger"></div>
-							</div>
-							<br />
-							<div>
-								<label for="postalCode">Postal Code</label> <input type="text"
-									class="form-control" id="postalCode" name="postalCode"
-									th:field="*{postalCode}" required />
-									<div th:if="${#fields.hasErrors('postalCode')}" th:errors="*{postalCode}" class="text-danger"></div>
-							</div>
-							<br />
-							<div>
-								<label for="address">Address</label>
-								<textarea class="form-control" id="address" name="address"
-									th:field="*{address}" required></textarea>
-									<div th:if="${#fields.hasErrors('address')}" th:errors="*{address}" class="text-danger"></div>
-							</div>
-							<br />
-							<div>
-								<label for="picture">Picture</label> <input type="file"
-									class="form-control" id="picture" name="picture"
-									accept=".jpg,.jpeg,.png,.svg,.webp" />
-							</div>
-						</div>
-					</div>
-					<br />
-					<div>
-						<button class="btn btn-primary" type="submit">Register</button>
-						<button class="btn btn-primary" type="reset">Clean</button>
-					</div>
-				</form>
-				<p>
-					Already have an account? <a class="" th:href="@{/loginPage}">Login
-						Here</a>.
-				</p>
-			</div>
-		</div>
-	</div>
+<div class="container flex-grow-1">
+    <div class="row">
+        <div class="col-md-10 card mx-auto mt-4 p-3">
+            <div th:if="${registrationError}"
+                 class="alert alert-danger my-2 text-center" th:text="${message}">
+            </div>
+            <h3
+                    class="text-primary text-center my-2 d-flex justify-content-center align-items-center">
+                <img th:src="@{/image/login.svg}" width="35" height="35"
+                     class="me-1" alt="login"/> <span>Create New Account</span>
+            </h3>
+            <form method="post" th:action="@{/customer/register}" th:object="${customer}" enctype="multipart/form-data">
+                <input type="hidden" th:name="${_csrf.parameterName}"
+                       th:value="${_csrf.token}"/>
+                <div class="row">
+                    <div class="col-md-6">
+                        <div>
+                            <label for="firstname">First Name</label> <input type="text"
+                                                                             class="form-control" id="firstname"
+                                                                             name="firstname"
+                                                                             th:field="*{firstname}" required/>
+                            <div th:if="${#fields.hasErrors('firstname')}" th:errors="*{firstname}"
+                                 class="text-danger"></div>
+                        </div>
+                        <br/>
+                        <div>
+                            <label for="lastname">Last Name</label> <input type="text"
+                                                                           class="form-control" id="lastname"
+                                                                           name="lastname"
+                                                                           th:field="*{lastname}" required/>
+                            <div th:if="${#fields.hasErrors('lastname')}" th:errors="*{lastname}"
+                                 class="text-danger"></div>
+                        </div>
+                        <br/>
+                        <div>
+                            <label for="email">Email</label> <input type="email"
+                                                                    class="form-control" id="email" name="email"
+                                                                    th:field="*{email}" required/>
+                            <div th:if="${#fields.hasErrors('email')}" th:errors="*{email}" class="text-danger"></div>
+                        </div>
+                        <br/>
+                        <div>
+                            <label for="phone">Phone</label> <input type="text"
+                                                                    class="form-control" id="phone" name="phone"
+                                                                    th:field="*{phoneNumber}" required/>
+                            <div th:if="${#fields.hasErrors('phoneNumber')}" th:errors="*{phoneNumber}"
+                                 class="text-danger"></div>
+                        </div>
+                        <br/>
+                        <div>
+                            <label for="password">Password</label> <input type="password"
+                                                                          class="form-control" id="password"
+                                                                          name="password"
+                                                                          th:field="*{password}" required/>
+                            <div th:if="${#fields.hasErrors('password')}" th:errors="*{password}"
+                                 class="text-danger"></div>
+                        </div>
+                    </div>
+                    <br/>
+                    <div class="col-md-6">
+                        <div>
+                            <label for="country">Country</label> <select type="text"
+                                                                         class="form-control" id="country"
+                                                                         name="country"
+                                                                         th:field="*{country}" required>
+                            <option value="">--Select Your Country--</option>
+                            <option th:each="country : ${countries}"
+                                    th:value="${country.id}" th:text="${country.name}"></option>
+                        </select>
+                            <div th:if="${#fields.hasErrors('country')}" th:errors="*{country}"
+                                 class="text-danger"></div>
+                        </div>
+                        <br/>
+                        <div>
+                            <label for="state">State</label> <select type="text"
+                                                                     class="form-control" id="state" name="state"
+                                                                     th:field="*{state}" required>
+                            <option value="">--Select Your State--</option>
+                            <option th:each="state : ${states}" th:value="${state.id}"
+                                    th:text="${state.name}"></option>
+                        </select>
+                            <div th:if="${#fields.hasErrors('state')}" th:errors="*{state}" class="text-danger"></div>
+                        </div>
+                        <br/>
+                        <div>
+                            <label for="postalCode">Postal Code</label> <input type="text"
+                                                                               class="form-control" id="postalCode"
+                                                                               name="postalCode"
+                                                                               th:field="*{postalCode}" required/>
+                            <div th:if="${#fields.hasErrors('postalCode')}" th:errors="*{postalCode}"
+                                 class="text-danger"></div>
+                        </div>
+                        <br/>
+                        <div>
+                            <label for="address">Address</label>
+                            <textarea class="form-control" id="address" name="address"
+                                      th:field="*{address}" required></textarea>
+                            <div th:if="${#fields.hasErrors('address')}" th:errors="*{address}"
+                                 class="text-danger"></div>
+                        </div>
+                        <br/>
+                        <div>
+                            <label for="picture">Picture</label> <input type="file"
+                                                                        class="form-control" id="picture" name="picture"
+                                                                        accept=".jpg,.jpeg,.png,.svg,.webp"/>
+                        </div>
+                    </div>
+                </div>
+                <br/>
+                <div>
+                    <button class="btn btn-primary" type="submit">Register</button>
+                    <button class="btn btn-primary" type="reset">Clean</button>
+                </div>
+            </form>
+            <p>
+                Already have an account? <a class="" th:href="@{/loginPage}">Login
+                Here</a>.
+            </p>
+        </div>
+    </div>
+</div>
 
-	<footer th:replace="~{fragment/footer :: footer}"></footer>
+<footer th:replace="~{fragment/footer :: footer}"></footer>
 </body>
 </html>
