--- a/ShopmeWebParent/ShopmeFrontend/src/main/resources/templates/fragment/navbar.html
+++ b/ShopmeWebParent/ShopmeFrontend/src/main/resources/templates/fragment/navbar.html
@@ -41,7 +41,7 @@
                                th:href="@{'/customer/profile?id='+${#authentication.principal.customer.id}}">Profile</a>
                         </li>
                         <li><a class="dropdown-item"
-                               th:href="@{'/customer/profile?id='+${#authentication.principal.customer.id}}">Address
+                               th:href="@{'/address'}">Address
                             Book</a>
                         </li>
                         <li>
