--- a/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/categories.html
+++ b/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/categories.html
@@ -25,7 +25,7 @@
             </div>
 
             <!-- Table Start -->
-            <div th:replace="~{fragment/table :: table(${categoryResult},${tableUrl},~{::#table})}">
+            <div th:replace="~{fragment/table :: table(${categoryResult},${tableUrl},~{::#table},false,false)}">
                 <table class="table table-hover" id="table">
                     <thead>
                     <tr>
