--- a/ShopmeWebParent/ShopmeFrontend/src/main/resources/templates/address_page.html
+++ b/ShopmeWebParent/ShopmeFrontend/src/main/resources/templates/address_page.html
@@ -43,7 +43,8 @@
 
                     <h3>
                         <span th:text="${address.country.name}"></span>,
-                        <span th:text="${address.state.name}"></span>
+                        <span th:text="${address.state.name}"></span>,
+                        <span th:text="${address.city}"></span>
                     </h3>
                     <p th:text="${address.address}" class="text-muted my-2"></p>
                     <p>
