--- a/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/address.html
+++ b/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/address.html
@@ -8,7 +8,7 @@
 <div class="container-fluid my-2 flex-grow-1">
     <div class="row">
         <div class="col-md-10 mx-auto">
-            <h2 class="my-3 text-primary">Manage Customers</h2>
+            <h2 class="my-3 text-primary">Manage Customer Address</h2>
 
             <div class="alert"
                  th:classappend="${deletedSuccessfully} ? 'alert-success' : 'alert-danger'"
@@ -27,6 +27,7 @@
                         <th scope="col">Country</th>
                         <th scope="col">State</th>
                         <th scope="col">Address</th>
+                        <th scope="col">City</th>
                         <th scope="col">PostalCode</th>
                         <th scope="col">Selected</th>
                         <th scope="col">
@@ -44,6 +45,7 @@
                         <td th:text="${address.country.name}"></td>
                         <td th:text="${address.state.name}"></td>
                         <td th:text="${address.address}"></td>
+                        <td th:text="${address.city}"></td>
                         <td th:text="${address.postalCode}"></td>
                         <td><img class="icon"
                                  th:src="@{${address.selected} ? '/image/green.svg' : '/image/red.svg'}"
